# Chemdata

./: .gitignore  Chemdata.code-workspace  INSTALL_mysql  LICENSE  README.md  api_client.py  binding_data_processor.py  cache_manager.py  checkpoint_manager.py  chembl_client.py  chemical_properties.py  cli.py  cline_utils.py  config.py  data_processor.py  logger.py  models.py  pubmed_processor.py  pyproject.toml  requirements.txt  run.py  setup.cfg  structure_utils.py  web_enrichment.py
scripts/: benchmark.sh  check_deps.sh  clean.sh  collect_data.sh  compile_compounds.py  dev.sh  example.sh  get_bindingdb.sh  install_special_deps.sh  setup_dev.sh  test.sh  update_deps.sh
web/: app.py
web/templates/: index.html
web_enrichment/: __init__.py  http_client.py  llm_utils.py  name_utils.py
web_enrichment/data_sources/: __init__.py  chembl.py  community.py  pubchem.py  regulatory.py  swiss.py  web_search.py
