[project]
name = "chemdata"
version = "0.1.0"
description = "Chemical data collection and analysis tool"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    # Core dependencies
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    
    # Chemical analysis
    "rdkit>=2024.3.1",
    
    # Data handling
    "openpyxl>=3.1.2",
    "python-dateutil>=2.8.2",
    
    # Web scraping
    "lxml>=5.1.0",
    "html5lib>=1.1",
    
    # API interaction
    "ratelimit>=2.2.1",
    "backoff>=2.2.1",
    "pubchempy>=1.0.4",
    "serpapi>=0.1.0",
    "openai>=1.0.0",
    
    # Progress bars
    "ipywidgets>=8.1.0",
    
    # Web application
    "flask>=2.0.0",
    "jinja2>=3.0.0",
    "aiohttp>=3.8.0",
    "werkzeug>=2.0.0",
    "ketcher-python>=1.0.0",
    "datatables>=0.4.9",
    "bootstrap-flask>=2.0.0",
    
    # Patent search
    "@modelcontextprotocol/sdk>=0.1.0",
    "fast-xml-parser>=4.0.0",
    
    # PDF processing
    "pypdf>=3.0.0",
    "pdfminer.six>=20221105",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=chemdata"
testpaths = ["tests"]
