[metadata]
name = chemical_data_collector
version = 0.1.0
description = A tool for collecting and aggregating chemical compound data from multiple sources
long_description = file: README.md
long_description_content_type = text/markdown
author = Cline
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    pandas>=2.2.0
    beautifulsoup4>=4.12.0
    tqdm>=4.66.0
    rdkit>=2024.3.1
    numpy>=1.26.0
    openpyxl>=3.1.2
    lxml>=5.1.0
    html5lib>=1.1
    python-dateutil>=2.8.2
    ratelimit>=2.2.1

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.0.0
    mypy>=1.0.0
    flake8>=6.0.0

[flake8]
max-line-length = 150
exclude = .git,__pycache__,build,dist
ignore = E203, W503, E501, E303, F403, F405, E402, F811, E741

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=chemical_data_collector --cov-report=term-missing

[isort]
profile = black
multi_line_output = 3
